--- a/my-cv-profile/public/index.html
+++ b/my-cv-profile/public/index.html
@@ -5,10 +5,29 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    
+    <!-- Primary Meta Tags -->
+    <title>Sahadev Patil - Full Stack Developer | .NET | React | Angular</title>
+    <meta name="title" content="Sahadev Patil - Full Stack Developer | .NET | React | Angular">
+    <meta name="description" content="Full Stack Developer with 9+ years of experience in .NET, React, Angular, and SQL Server. Specialized in healthcare and finance domains.">
+    <meta name="keywords" content="Full Stack Developer, .NET Developer, React Developer, Angular Developer, Software Engineer, Healthcare IT, Finance Technology, SQL Server, Azure, AWS">
+    <meta name="author" content="Sahadev Patil">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://my-cv-profile-sahadevpatils-projects.vercel.app/">
+    <meta property="og:title" content="Sahadev Patil - Full Stack Developer | .NET | React | Angular">
+    <meta property="og:description" content="Full Stack Developer with 9+ years of experience in .NET, React, Angular, and SQL Server. Specialized in healthcare and finance domains.">
+    <meta property="og:image" content="%PUBLIC_URL%/profile-preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://my-cv-profile-sahadevpatils-projects.vercel.app/">
+    <meta property="twitter:title" content="Sahadev Patil - Full Stack Developer">
+    <meta property="twitter:description" content="Full Stack Developer with 9+ years of experience in .NET, React, Angular, and SQL Server.">
+    <meta property="twitter:image" content="%PUBLIC_URL%/profile-preview.png">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +43,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sahadev Patil</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
